# AdapterAtividadeCPP

./: CMakeLists.txt  README.md  main.cpp
include/factories/: FactoryInstagram.h  FactoryLinkedIn.h  FactoryTikTok.h  FactoryTwitter.h  iFactoryStrategy.h
include/gerenciadores/: GerenciadorInstagram.h  GerenciadorLinkedIn.h  GerenciadorTikTok.h  GerenciadorTwitter.h  iGerenciadorMidiaSocial.h
include/legados/: Instagram.h  LinkedIn.h  TikTok.h  Twitter.h
include/strategies/: InstagramStrategy.h  LinkedInStrategy.h  TikTokStrategy.h  TwitterStrategy.h  iStrategy.h
